--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,26 @@ body {
 
 .main {
 	display: flex;
+	align-items: center;
+
+	height: 100%;
+	width: 100%;
 }
 
 
 .leftArrow, .rightArrow {
 	width: 5%;
+	height: 100%;
+
+	display: flex;
+	align-items: center;
+
+	padding: 0 1%;
 }
 
 
 .cards {
 	width: 90%;
+	align-items: center;
+	height: 100%;
 }
