--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
 	height: 100%;
 	width: 100%;
 
+	background-color: #FF0;
+
 	margin: 0;
 }
 
@@ -41,4 +43,17 @@ body {
 	width: 90%;
 	align-items: center;
 	height: 100%;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+
+.card {
+	height: 50%;
+	width: 50%;
+	background-color: #FFF;
+
+	box-shadow: 0px 5px 15px #888;
 }
