--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,18 @@ body {
 	width: 5%;
 	height: 100%;
 
+	font-size: 2em;
+	cursor: pointer;
+
 	display: flex;
 	align-items: center;
 
 	padding: 0 1%;
+}
+
+
+.leftArrow:hover, .rightArrow:hover {
+	background-color: rgba(200,200,200,0.2);
 }
 
 
@@ -65,6 +73,7 @@ body {
 
 	font-size: 2em;
 	text-align: center;
+	font-weight: bold;
 
 	height: 40px;
 	width: 40px;
