--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 	height: 100%;
 	width: 100%;
 
-	background-color: #FF0;
+	background-color: #FD0;
 
 	margin: 0;
 }
@@ -43,7 +43,7 @@ body {
 
 
 .leftArrow:hover, .rightArrow:hover {
-	background-color: rgba(200,200,200,0.2);
+	background-color: rgba(0,0,0,0.2);
 }
 
 
@@ -61,9 +61,50 @@ body {
 .card {
 	height: 50%;
 	width: 50%;
+	padding: 2%;
 	background-color: #FFF;
 
 	box-shadow: 0px 5px 15px #888;
+
+	display: flex;
+	flex-direction: column;
+}
+
+
+.actionDiv {
+	display: flex;
+
+	width: 100%;
+	height: 10%;
+
+	justify-content: space-around;
+}
+
+
+.textDiv {
+	font-size: 3em;
+	display: flex;
+
+	align-items: center;
+	justify-content: center;
+
+	height: 80%;
+}
+
+
+.dateDiv {
+	font-size: 1.2em;
+	display: flex;
+
+	align-items: center;
+	justify-content: center;
+
+	height: 5%;
+}
+
+
+.doneButton, .deleteButton {
+	cursor: pointer;
 }
 
 
