--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,8 @@ body {
 
 	display: flex;
 	flex-direction: column;
+
+	position: absolute;
 }
 
 
@@ -125,7 +127,7 @@ body {
 
 	bottom: 2%;
 
-	right: 43%;
+	right: 50%;
 
 
 	box-shadow: 1px 5px 15px #888;
