--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ body {
 	flex-direction: column;
 
 	position: absolute;
+
+	z-index: 0;
 }
 
 
@@ -105,7 +107,7 @@ body {
 }
 
 
-.todoModal {
+.todoModal, .editModal {
 	position: absolute;
 
 	height: 100%;
@@ -132,7 +134,7 @@ body {
 }
 
 
-.inputText {
+.inputText, .editText {
 	height: 20%;
 	width: 50%;
 	padding: 10px;
@@ -150,7 +152,7 @@ body {
 }
 
 
-.closeModal, .submit {
+.closeModal, .submit, .edit, .close {
 	font-weight: bold;
 	padding: 10px;
 	color: #FFF;
@@ -160,12 +162,12 @@ body {
 }
 
 
-.closeModal {
+.closeModal, .close {
 	background-color: #F00;
 }
 
 
-.submit {
+.submit, .edit {
 	background-color: #529c5b;
 }
 
