--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,24 @@ body {
 }
 
 
-@media screen and (max-width: 400px) {
-	.textDiv {
-		font-size: 1.5em;
+.mobileBanner {
+	display: none;
+	position: absolute;
+	background-color: #000;
+	color: #FFF;
+	height: 100%;
+	width: 100%;
+	z-index: 100;
+	text-align: center;
+	font-size: 3em;
+}
+
+
+@media screen and (max-width: 901px) {
+
+	.mobileBanner {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 }
